# uuid-authentication

backend/: Cargo.toml
backend/src/: main.rs
mac/Example.xcodeproj/: project.pbxproj
mac/Example.xcodeproj/project.xcworkspace/xcuserdata/lg.xcuserdatad/: UserInterfaceState.xcuserstate
mac/Sources/: AppDelegate.swift  AuthenticationService.swift  ContentView.swift  HomeView.swift  SceneDelegate.swift  User.swift  WelcomeViewController.swift
