[package]
name = "example"
version = "0.1.0"
authors = ["Luna Graysen <luna.graysen@bitrise.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
tokio = { version = "0.2", features = ["full"] }